create server and add not found page and fix other problem

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,8 @@
       </section>
     </main>
     <footer></footer>
-         
+    <script src="./public/js/fetch.js"></script>
+    <script src="./public/js/logic.js"></script>
+    <script src="./public/js/script.js"></script> 
 </body>
 </html>
