add script file and fix other problem in index.html and style.css

--- a/public/index.html
+++ b/public/index.html
@@ -32,20 +32,14 @@
     <div class="logo">
       <h1>
         <i class="fa-solid fa-book-open"></i>
-        Bookle
+      Our Book
       </h1>
     </div>
 
-    <nav>
-      <ul>
-        <li class="active">home</li>
-        <li>about</li>
-        <li>contact</li>
-      </ul>
-    </nav>
+   
   </header>
   <main>
-    <section class="books-bg"></section>
+ 
       <section class="search-section">
         <div class="container">
           <div>
